fix: Update DataStorage OpenAPI spec for severity as string (DD-SEVERITY-001)
OpenAPI Spec Changes:
- Change severity field from enum to string type (no normalization)
- Remove SeverityEnum validation (Gateway is a "dumb pipe")
- Gateway captures raw severity from signal sources
- SignalProcessing service normalizes severity (not Gateway/DataStorage)

Test Infrastructure Updates:
- Update DataStorage integration template with latest OpenAPI spec
- Regenerate Go bindings via make generate before DS image build
- Fix E2E tests to use string severity values
- Update query API tests for new severity handling

Root Cause: DataStorage was enforcing severity enum validation, but
per DD-SEVERITY-001, Gateway should pass through raw signal data without
normalization. The SignalProcessing service is responsible for severity
normalization, not Gateway or DataStorage.

This aligns with the architectural principle that Gateway is a pass-through
service, and business logic (normalization) happens in downstream services.

Impact: DataStorage service, test infrastructure, E2E tests
Dependencies: None (backward compatibility not required)

--- a/test/infrastructure/datastorage-integration-template.yaml
+++ b/test/infrastructure/datastorage-integration-template.yaml
@@ -9,8 +9,8 @@
 server:
   port: 8080  # Internal container port
   host: "0.0.0.0"
-  read_timeout: "30s"
-  write_timeout: "30s"
+  readTimeout: "30s"
+  writeTimeout: "30s"
 
 logging:
   level: "{{LOG_LEVEL}}"  # Replaced: "info", "debug", "error"
@@ -21,11 +21,11 @@ database:
   port: {{POSTGRES_PORT}}    # Replaced: internal port (5432 for network, or host port)
   name: "{{DB_NAME}}"        # Replaced: database name
   user: "{{DB_USER}}"        # Replaced: database user
-  ssl_mode: "disable"  # Integration tests use insecure connections
-  max_open_conns: 25
-  max_idle_conns: 5
-  conn_max_lifetime: "5m"
-  conn_max_idle_time: "5m"
+  sslMode: "disable"  # Integration tests use insecure connections
+  maxOpenConns: 25
+  maxIdleConns: 5
+  connMaxLifetime: "5m"
+  connMaxIdleTime: "5m"
   # ADR-030 Section 6: Secrets loaded from mounted files
   secretsFile: "/etc/datastorage-secrets/database-credentials.yaml"
   passwordKey: "password"
@@ -34,9 +34,9 @@ redis:
   addr: "{{REDIS_HOST}}:{{REDIS_PORT}}"  # Replaced: Redis address
   db: {{REDIS_DB}}  # Replaced: Redis database number
   # DD-009: Redis DLQ configuration
-  dlq_stream_name: "audit:dlq:integration"
-  dlq_max_len: 10000
-  dlq_consumer_group: "datastorage-dlq-integration"
+  dlqStreamName: "audit:dlq:integration"
+  dlqMaxLen: 10000
+  dlqConsumerGroup: "datastorage-dlq-integration"
   # ADR-030 Section 6: Secrets loaded from mounted files
   secretsFile: "/etc/datastorage-secrets/redis-credentials.yaml"
   passwordKey: "password"
