--- a/test/integration/aianalysis/config/config.yaml
+++ b/test/integration/aianalysis/config/config.yaml
@@ -7,15 +7,15 @@ service:
 server:
   port: 8080
   host: "0.0.0.0"
-  read_timeout: 30s
-  write_timeout: 30s
+  readTimeout: 30s
+  writeTimeout: 30s
 
 database:
   host: host.containers.internal # Changed from container name (postgres) for port mapping
   port: 15438                    # AIAnalysis integration test port (per DD-TEST-001 v1.1)
   name: action_history
   user: slm_user
-  ssl_mode: disable
+  sslMode: disable
   maxOpenConns: 25
   maxIdleConns: 5
   connMaxLifetime: 5m
