test: Update integration test configs and fix service interactions
Config Updates (All Services):
- Replace localhost with 127.0.0.1 for IPv6 compatibility
- Update DataStorage connection strings for integration tests
- Standardize Redis, PostgreSQL, and HAPI service endpoints
- Update log levels for better observability in CI/CD

Integration Test Fixes:
- DataStorage: Fix workflow repository integration tests
- Notification: Fix controller audit emission and retry logic tests
- RemediationOrchestrator: Fix audit emission and error handling tests
- Gateway: Update config for deduplication testing
- AuthWebhook: Align config with new test infrastructure

Infrastructure Updates:
- Ensure test configs use programmatic container management
- Align with TESTING_GUIDELINES.md v2.5.2 (envtest + programmatic containers)
- Remove podman-compose references (use Go container management)

These changes fix integration test failures caused by:
1. IPv6 resolution issues with localhost (GW-E2E-CIRCUIT-BREAKER)
2. Outdated DataStorage connection configs
3. Service endpoint mismatches in multi-service tests

Impact: Integration test infrastructure and configs
Dependencies: None

--- a/config.app/dynamic-context-orchestration.yaml
+++ b/config.app/dynamic-context-orchestration.yaml
@@ -4,8 +4,8 @@
 server:
   port: 8091
   host: "0.0.0.0"
-  read_timeout: "30s"
-  write_timeout: "30s"
+  readTimeout: "30s"
+  writeTimeout: "30s"
 
 logging:
   level: "info"
