--- a/config.app/container-production.yaml
+++ b/config.app/container-production.yaml
@@ -66,9 +66,9 @@ effectiveness:
 server:
   port: 8080
   host: "0.0.0.0"
-  read_timeout: "30s"
-  write_timeout: "30s"
-  idle_timeout: "60s"
+  readTimeout: "30s"
+  writeTimeout: "30s"
+  idleTimeout: "60s"
 
 # Metrics configuration
 metrics:
