--- a/config.app/integration-testing.yaml
+++ b/config.app/integration-testing.yaml
@@ -46,10 +46,10 @@ database:
   name: "action_history"
   user: "slm_user"
   password: "slm_password_dev"
-  ssl_mode: "disable"
-  max_open_conns: 25
-  max_idle_conns: 5
-  conn_max_lifetime: "1h"
+  sslMode: "disable"
+  maxOpenConns: 25
+  maxIdleConns: 5
+  connMaxLifetime: "1h"
 
 # Vector Database Configuration
 vector_database:
@@ -59,7 +59,7 @@ vector_database:
   name: "vector_store"
   user: "vector_user"
   password: "vector_password_dev"
-  ssl_mode: "disable"
+  sslMode: "disable"
   dimension: 1536
 
 # Redis Configuration
