--- a/test/integration/authwebhook/config/config.yaml
+++ b/test/integration/authwebhook/config/config.yaml
@@ -13,15 +13,15 @@ service:
 server:
   port: 8080  # Container port (mapped to 18099 on host)
   host: "0.0.0.0"
-  read_timeout: 30s
-  write_timeout: 30s
+  readTimeout: 30s
+  writeTimeout: 30s
 
 database:
   host: host.containers.internal  # Podman limitation: use host access, not container names
   port: 15442  # DD-TEST-001 v2.1: Auth Webhook PostgreSQL port
   name: action_history
   user: slm_user
-  ssl_mode: disable
+  sslMode: disable
   maxOpenConns: 25
   maxIdleConns: 5
   connMaxLifetime: 5m
