--- a/test/integration/holmesgptapi/config/config.yaml
+++ b/test/integration/holmesgptapi/config/config.yaml
@@ -7,8 +7,8 @@
 server:
   port: 8080
   host: "0.0.0.0"
-  read_timeout: "30s"
-  write_timeout: "30s"
+  readTimeout: "30s"
+  writeTimeout: "30s"
 
 logging:
   level: "debug"  # Debug level for integration tests
@@ -20,7 +20,7 @@ database:
   port: 15439
   name: "action_history"
   user: "slm_user"
-  ssl_mode: "disable"
+  sslMode: "disable"
   maxOpenConns: 25
   maxIdleConns: 5
   connMaxLifetime: "5m"
