--- a/test/integration/remediationorchestrator/config/config.yaml
+++ b/test/integration/remediationorchestrator/config/config.yaml
@@ -6,14 +6,14 @@ service:
 server:
   port: 8080
   host: "0.0.0.0"
-  read_timeout: 30s
-  write_timeout: 30s
+  readTimeout: 30s
+  writeTimeout: 30s
 database:
   host: host.containers.internal
   port: 15435
   name: action_history
   user: slm_user
-  ssl_mode: disable
+  sslMode: disable
   maxOpenConns: 25
   maxIdleConns: 5
   connMaxLifetime: 5m
