feat(ro): Implement BR-HAPI-197 Phase 3 - RemediationOrchestrator NeedsHumanReview handling
Phase 3: RemediationOrchestrator changes to handle AIAnalysis.Status.NeedsHumanReview

Implementation:
- Added handleHumanReviewRequired() to prioritize human review path
- Updated handleFailed() to check NeedsHumanReview before WorkflowResolutionFailed
- Refactored notification creation into reusable helpers:
  * createManualReviewNotificationWithContext()
  * updateRemediationRequestForManualReview()
- Enhanced ManualReviewContext with HumanReviewReason field
- Updated buildManualReviewMetadata() to include humanReviewReason

Unit Tests (TDD RED-GREEN-REFACTOR):
- UT-RO-197-001: NeedsHumanReview triggers NotificationRequest creation
- UT-RO-197-002: NeedsHumanReview takes precedence over WorkflowResolutionFailed
- UT-RO-197-003: Multiple humanReviewReason values handled correctly
- UT-RO-197-004: NotificationRequest includes correct metadata
- UT-RO-197-005: NeedsHumanReview=false does NOT trigger notification
- UT-RO-197-006: IsWorkflowResolutionFailed helper validation
- Refactored IsWorkflowResolutionFailed tests to table-driven pattern

Integration Tests (envtest + Podman):
- IT-RO-197-001: Full RO reconciliation with needsHumanReview=true
- IT-RO-197-002: NO WorkflowExecution created when needsHumanReview=true
- IT-RO-197-003: Different humanReviewReason (rca_incomplete) handled correctly

Test Results:
- Unit tests: 271 passing (6 new BR-HAPI-197 tests)
- Integration tests: 55 passing (3 new BR-HAPI-197 tests)
- Zero regressions, zero pending tests

Files Modified:
- pkg/remediationorchestrator/handler/aianalysis.go
- pkg/remediationorchestrator/creator/notification.go
- test/unit/remediationorchestrator/aianalysis_handler_test.go
- test/integration/remediationorchestrator/needs_human_review_integration_test.go (NEW)
- config/crd/bases/*.yaml (auto-regenerated)

Related:
- BR-HAPI-197: Human Review Required Flag for AI Reliability Issues
- BR-HAPI-212: RCA Incomplete 

--- a/config/crd/bases/kubernaut.ai_remediationrequests.yaml
+++ b/config/crd/bases/kubernaut.ai_remediationrequests.yaml
@@ -38,7 +38,21 @@ spec:
           metadata:
             type: object
           spec:
-            description: RemediationRequestSpec defines the desired state of RemediationRequest.
+            description: |-
+              RemediationRequestSpec defines the desired state of RemediationRequest.
+
+              ADR-001: Spec Immutability
+              RemediationRequest represents an immutable event (signal received, remediation required).
+              Once created (by Gateway or external source), spec cannot be modified to ensure:
+              - Audit trail integrity (remediation matches original signal)
+              - No signal metadata tampering during remediation lifecycle
+              - Consistent signal data across all child CRDs (SignalProcessing, AIAnalysis, WorkflowExecution)
+
+              Cancellation: Delete the RemediationRequest CRD (Kubernetes-native pattern).
+              Status updates: Controllers update .status fields (not affected by spec immutability).
+
+              Note: Individual field immutability (e.g., signalFingerprint) is redundant with full spec immutability,
+              but retained for explicit documentation of critical fields.
             properties:
               affectedResources:
                 description: |-
@@ -223,6 +237,9 @@ spec:
             - targetResource
             - targetType
             type: object
+            x-kubernetes-validations:
+            - message: spec is immutable after creation (ADR-001)
+              rule: self == oldSelf
           status:
             description: RemediationRequestStatus defines the observed state of RemediationRequest.
             properties:
