--- a/config/crd/bases/kubernaut.ai_signalprocessings.yaml
+++ b/config/crd/bases/kubernaut.ai_signalprocessings.yaml
@@ -55,6 +55,15 @@ spec:
             description: |-
               SignalProcessingSpec defines the desired state of SignalProcessing.
               Implementation Plan Day 2: Aligned with IMPLEMENTATION_PLAN.md structure
+
+              ADR-001: Spec Immutability
+              SignalProcessing represents an immutable event (signal enrichment).
+              Once created by RemediationOrchestrator, spec cannot be modified to ensure:
+              - Audit trail integrity (processed signal matches original signal)
+              - No signal data tampering during enrichment
+              - Consistent context passed to AIAnalysis
+
+              To reprocess a signal, delete and recreate the SignalProcessing CRD.
             properties:
               enrichmentConfig:
                 description: Configuration for processing
@@ -186,6 +195,8 @@ spec:
             x-kubernetes-validations:
             - message: remediationRequestRef.name is required for audit trail correlation
               rule: self.remediationRequestRef.name != ''
+            - message: spec is immutable after creation (ADR-001)
+              rule: self == oldSelf
           status:
             description: |-
               SignalProcessingStatus defines the observed state of SignalProcessing.
