--- a/config/crd/bases/kubernaut.ai_workflowexecutions.yaml
+++ b/config/crd/bases/kubernaut.ai_workflowexecutions.yaml
@@ -58,6 +58,15 @@ spec:
             description: |-
               WorkflowExecutionSpec defines the desired state of WorkflowExecution
               Simplified per ADR-044 - Tekton handles step orchestration
+
+              ADR-001: Spec Immutability
+              WorkflowExecution represents an immutable event (workflow execution attempt).
+              Once created by RemediationOrchestrator, spec cannot be modified to ensure:
+              - Audit trail integrity (executed spec matches approved spec)
+              - No parameter tampering after HAPI validation
+              - No target resource changes after routing decisions
+
+              To change execution parameters, delete and recreate the WorkflowExecution.
             properties:
               confidence:
                 description: Confidence score from LLM (for audit trail)
@@ -167,6 +176,9 @@ spec:
             - targetResource
             - workflowRef
             type: object
+            x-kubernetes-validations:
+            - message: spec is immutable after creation (ADR-001)
+              rule: self == oldSelf
           status:
             description: |-
               WorkflowExecutionStatus defines the observed state
