refactor: Cursor rules comprehensive refactoring - 51% reduction in target files
## Summary

Comprehensive refactoring of Cursor AI rules to improve clarity, eliminate
duplication, and enhance maintainability. Reduced target files from 3,675 to
1,806 lines (51% reduction) while improving organization and scannability.

## Changes by Phase

### Phase 1: Core Testing and Methodology (59% reduction)
- Consolidated 00-core-development-methodology.mdc + 00-project-guidelines.mdc
  → 00-kubernaut-core-rules.mdc (710 → 380 lines, 46% reduction)
- Trimmed 03-testing-strategy.mdc (1090 → 280 lines, 74% reduction)
- Trimmed 08-testing-anti-patterns.mdc (474 → 280 lines, 41% reduction)
- Extracted detailed anti-pattern guidance to docs/testing/ANTI_PATTERN_DETECTION.md
- Created validation scripts: check-test-anti-patterns.sh,
  check-business-integration.sh, check-tdd-compliance.sh
- Added Makefile targets: lint-rules, lint-test-patterns,
  lint-business-integration, lint-tdd-compliance

### Phase 2: AI Assistant Consolidation (65% reduction)
- Consolidated 00-ai-assistant-behavioral-constraints-consolidated.mdc +
  00-ai-assistant-methodology-enforcement.mdc
  → 01-ai-assistant-behavior.mdc (740 → 259 lines, 65% reduction)
- Added test plan ID guidance (preferred over BR numbers)
- Added transactional BR test plan location (docs/testing/{BR-NAME}/)
- Updated 13-conflict-resolution-matrix.mdc references

### Phase 3: Specialized Rules (35% AI/ML reduction)
- Trimmed 12-ai-ml-development-methodology.mdc (312 → 203 lines, 35% reduction)
- Reorganized 04-ai-ml-guidelines.mdc (161 → 180 lines, better structure)
- Reorganized 05-kubernetes-safety.mdc (188 → 224 lines, better structure)
- Added refactoring build validation guidance to 00-kubernaut-core-rules.mdc

### Final Adjustments
- Corrected test scenario naming convention from TP-* to {TIER}-{SERVICE}-{BR_NUMBER}-{SEQUENCE}
  (e.g., UT-AA-197-001, IT-RO-197-001, E2E-RO-197-002)
- Aligned with existing conventions in docs/test

--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,8 @@ build_failures.*
 !.env.example
 
 # IDE configuration directories
-.cursor/
+.cursor/*
+!.cursor/rules/
 .claude/
 
 # Ephemeral documentation files
