ci: Add authwebhook to CI pipeline test matrices
## Summary

Added authwebhook service to GitHub Actions CI pipeline to ensure unit and
integration tests run on every PR. Previously, authwebhook tests existed
locally but were not executed in CI, creating a coverage gap.

## Changes

### Unit Test Matrix
- Added 'authwebhook' to unit test service matrix
- Location: .github/workflows/ci-pipeline.yml line 142
- Executes: make test-unit-authwebhook

### Integration Test Matrix
- Added 'authwebhook' to integration test service array (line 235)
- Added authwebhook include entry with service name and timeout (lines 243-245)
- Service name: "Auth Webhook"
- Timeout: 10 minutes
- Executes: make test-integration-authwebhook

## Impact

✅ Unit tests now run on every PR (~2-5 minutes)
✅ Integration tests now run on every PR (~5-10 minutes)
✅ Coverage metrics tracked in CI
✅ Regression detection enabled
✅ Closes authwebhook CI coverage gap

## Documentation

- Created docs/triage/AUTHWEBHOOK_CI_COVERAGE_TRIAGE.md
- Documents triage findings, implementation, and verification steps

## Verification

Next PR will:
- Run authwebhook unit tests in CI
- Run authwebhook integration tests in CI
- Report test results in CI summary
- Track authwebhook coverage

Related: Makefile already has test-unit-authwebhook and
test-integration-authwebhook targets (lines 505-518)

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -139,6 +139,7 @@ jobs:
       matrix:
         service:
           - aianalysis
+          - authwebhook
           - datastorage
           - gateway
           - notification
@@ -231,7 +232,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        service: [signalprocessing, aianalysis, workflowexecution, remediationorchestrator, notification, gateway, datastorage, holmesgpt-api]
+        service: [signalprocessing, aianalysis, authwebhook, workflowexecution, remediationorchestrator, notification, gateway, datastorage, holmesgpt-api]
         include:
           - service: signalprocessing
             service_name: "Signal Processing"
@@ -239,6 +240,9 @@ jobs:
           - service: aianalysis
             service_name: "AI Analysis"
             timeout: 15
+          - service: authwebhook
+            service_name: "Auth Webhook"
+            timeout: 10
           - service: workflowexecution
             service_name: "Workflow Execution"
             timeout: 15
