--- a/test/e2e/authwebhook/manifests/authwebhook-deployment.yaml
+++ b/test/e2e/authwebhook/manifests/authwebhook-deployment.yaml
@@ -153,7 +153,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: authwebhook-mutating
-authwebhook:
+webhooks:
   - name: workflowexecution.mutate.kubernaut.ai
     admissionReviewVersions: ["v1"]
     clientConfig:
@@ -216,7 +216,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: authwebhook-validating
-authwebhook:
+webhooks:
   - name: notificationrequest.validate.kubernaut.ai
     admissionReviewVersions: ["v1"]
     clientConfig:
