fix(hapi): update Data Storage client method name in workflow validation tests
Root cause: Tests were mocking obsolete method name get_workflow_by_uuid
but implementation calls get_workflow_by_id (per OpenAPI spec).

Changes:
- Update all 21 occurrences in test_workflow_response_validation.py
- Change: get_workflow_by_uuid -> get_workflow_by_id
- Update .gitignore to track docs/triage/ directory

Results:
✅ Workflow validation tests: 14/14 passing (was 0/14)
✅ Total tests: 522/533 passing (+14 fixed)
⏳ Recovery tests: 11 still failing (separate LLM config issue)

Business Requirements:
- BR-AI-023: Hallucination detection (workflow existence)
- BR-HAPI-191: Parameter validation
- BR-HAPI-196: Container image consistency

Triage: docs/triage/HAPI_UNIT_TEST_FAILURES_TRIAGE.md

--- a/.gitignore
+++ b/.gitignore
@@ -199,10 +199,12 @@ SESSION_*.txt
 GOOD_*.md
 OVERNIGHT_*.md
 
-# EXCEPTIONS: Allow all files in docs/handoff/ (cross-team Q&A archive)
+# EXCEPTIONS: Allow all files in docs/handoff/ and docs/triage/ (cross-team documentation)
 # Must be at the END of the file to override all ignore patterns above
 !docs/handoff/
 !docs/handoff/**
+!docs/triage/
+!docs/triage/**
 
 # Auto-generated OpenAPI spec copies (via go:generate)
 # DD-API-002: These are auto-generated from api/openapi/*.yaml
