fix(ci): override ENTRYPOINT for must-gather verification commands
🐛 **Root Cause**:
- Container build succeeded, but verification failed with 'Error: Unknown option: sh'
- Dockerfile has ENTRYPOINT ["/usr/bin/gather"], so 'sh -c' was being passed to /usr/bin/gather instead of executing sh

🔧 **Fix Applied**:
- Add --entrypoint sh to all verification podman run commands
- This overrides the container's ENTRYPOINT to run sh for verification
- Test container execution uses default ENTRYPOINT (just pass --help)

**Before (WRONG)**:
```bash
podman run --rm --platform linux/amd64 \
  localhost/must-gather:ci-test \
  sh -c "test -x /usr/bin/gather"  # sh passed to /usr/bin/gather
```

**After (CORRECT)**:
```bash
podman run --rm --platform linux/amd64 \
  --entrypoint sh \                   # Override ENTRYPOINT
  localhost/must-gather:ci-test \
  -c "test -x /usr/bin/gather"       # Args for sh
```

✅ **Expected Result**:
- Container Build (amd64): All verification steps pass
- Unit Tests (45 bats): Continue passing (already fixed)

📝 **Related**: PR #20 CI failure triage

--- a/.github/workflows/must-gather-tests.yml
+++ b/.github/workflows/must-gather-tests.yml
@@ -133,14 +133,16 @@ jobs:
 
           # Verify main script
           podman run --rm --platform linux/amd64 \
+            --entrypoint sh \
             localhost/must-gather:ci-test \
-            sh -c "test -x /usr/bin/gather"
+            -c "test -x /usr/bin/gather"
           echo "✅ Main script present"
 
           # Verify collectors
           COUNT=$(podman run --rm --platform linux/amd64 \
+            --entrypoint sh \
             localhost/must-gather:ci-test \
-            sh -c "ls /usr/share/must-gather/collectors/ | wc -l")
+            -c "ls /usr/share/must-gather/collectors/ | wc -l")
           if [ "$COUNT" -eq 9 ]; then
             echo "✅ All 9 collectors present"
           else
@@ -150,20 +152,23 @@ jobs:
 
           # Verify sanitizers
           podman run --rm --platform linux/amd64 \
+            --entrypoint sh \
             localhost/must-gather:ci-test \
-            sh -c "test -x /usr/share/must-gather/sanitizers/sanitize-all.sh"
+            -c "test -x /usr/share/must-gather/sanitizers/sanitize-all.sh"
           echo "✅ Sanitization framework present"
 
           # Verify tools
           echo "🔍 Verifying required tools..."
           podman run --rm --platform linux/amd64 \
+            --entrypoint sh \
             localhost/must-gather:ci-test \
-            sh -c "which kubectl"
+            -c "which kubectl"
           echo "✅ kubectl installed"
 
           podman run --rm --platform linux/amd64 \
+            --entrypoint sh \
             localhost/must-gather:ci-test \
-            sh -c "which jq"
+            -c "which jq"
           echo "✅ jq installed"
 
           echo ""
@@ -174,7 +179,7 @@ jobs:
           echo "🧪 Testing container can execute..."
           OUTPUT=$(podman run --rm --platform linux/amd64 \
             localhost/must-gather:ci-test \
-            sh -c "/usr/bin/gather --help")
+            --help)
           if echo "$OUTPUT" | grep -q "Kubernaut Must-Gather"; then
             echo "✅ Container executes successfully"
           else
