fix(remediationorchestrator): Add namespace isolation to consecutive failure blocking
BR-ORCH-042: Multi-tenant safety - consecutive failure blocking must be namespace-scoped

Root Cause:
- CheckConsecutiveFailures was querying ALL RemediationRequests with same SignalFingerprint across all namespaces
- This violated multi-tenant isolation requirements

Fix:
- Added client.InNamespace(rr.Namespace) to the List query
- Ensures blocking logic respects namespace boundaries
- Each tenant's failures are isolated and don't affect other tenants

Verification:
- All 59 RO integration tests pass (58 → 59)
- Multi-tenant isolation test now validates namespace boundaries correctly

Severity: MEDIUM-HIGH - Production multi-tenant isolation issue
Test: test/integration/remediationorchestrator/blocking_integration_test.go:260

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -283,6 +283,29 @@ jobs:
       - name: Validate Data Storage OpenAPI spec (ADR-031)
         if: matrix.service == 'datastorage'
         run: make validate-openapi-datastorage
+      - name: Collect must-gather logs on failure
+        if: failure()
+        run: |
+          echo "📋 Collecting must-gather logs for triage..."
+          if [ -d "/tmp/kubernaut-must-gather" ]; then
+            echo "✅ Found must-gather directory"
+            ls -la /tmp/kubernaut-must-gather/
+            # Create timestamped archive for this service
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            tar -czf must-gather-${{ matrix.service }}-${TIMESTAMP}.tar.gz -C /tmp kubernaut-must-gather/
+            echo "✅ Created must-gather archive: must-gather-${{ matrix.service }}-${TIMESTAMP}.tar.gz"
+          else
+            echo "⚠️  No must-gather directory found at /tmp/kubernaut-must-gather"
+            echo "    This may be expected if tests failed before must-gather was triggered"
+          fi
+      - name: Upload must-gather logs as artifacts
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: must-gather-logs-${{ matrix.service }}-${{ github.run_id }}
+          path: must-gather-*.tar.gz
+          retention-days: 14
+          if-no-files-found: warn
       - name: Cleanup
         if: always()
         run: podman ps -a --filter "name=${{ matrix.service }}-" --format "{{.Names}}" | xargs -r podman rm -f
