--- a/test/integration/aianalysis/config/config.yaml
+++ b/test/integration/aianalysis/config/config.yaml
@@ -25,7 +25,7 @@ database:
   passwordKey: "password"
 
 redis:
-  addr: host.containers.internal:16384 # Changed from container name (redis:6379), AIAnalysis integration port (DD-TEST-001 v1.1)
+  addr: host.containers.internal:16384 # AIAnalysis integration port (DD-TEST-001 v1.1)
   db: 0
   dlqStreamName: dlq-stream
   dlqMaxLen: 1000
