--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,6 @@ coverage-e2e/
 
 # Generated integration test configs (ADR-030)
 test/infrastructure/.generated-configs/
+# Cursor Swarm Extension (development)
+.cursor-swarm-dev/
+*.vsix
