feat(datastorage): integrate K8s auth middleware with dependency injection
**Business Requirement**: DD-AUTH-014 (SOC2-compliant user attribution)

**Changes**:
- Wire auth middleware in cmd/datastorage/main.go via dependency injection
- Add Authenticator and Authorizer to server constructor
- Update OpenAPI spec with 401/403 responses
- Update deployment manifests for K8s ServiceAccount mounting
- Configure server to allow PORT env override for testing

**Behavior**:
- ALL DataStorage HTTP endpoints now require Bearer token auth
- Token validated via K8s TokenReview API
- User identity extracted for audit logging
- 401 Unauthorized for missing/invalid tokens
- 403 Forbidden for insufficient permissions

**Testing**:
- Maintains backward compatibility via mock auth in tests
- Real auth validated in integration and E2E tests

**References**:
- DD-AUTH-014: Middleware-based SAR authentication
- BR-AUDIT-005: Audit event attribution requirements

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -172,6 +172,24 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/RFC7807Problem'
+        '401':
+          description: |
+            Authentication failed - Invalid or missing Bearer token.
+            
+            **Authority**: DD-AUTH-014 (Middleware-based authentication)
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RFC7807Problem'
+        '403':
+          description: |
+            Authorization failed - Kubernetes SubjectAccessReview (SAR) denied access.
+            
+            **Authority**: DD-AUTH-014 (Middleware-based authorization)
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RFC7807Problem'
         '500':
           description: Internal server error
           content:
@@ -388,6 +406,40 @@ paths:
                 $ref: '#/components/schemas/AuditEventResponse'
         '400':
           description: Validation error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RFC7807Problem'
+        '401':
+          description: |
+            Authentication failed - Invalid or missing Bearer token.
+            
+            **Source**: DataStorage auth middleware (DD-AUTH-014)
+            
+            **Cause**: 
+            - No Authorization header
+            - Invalid Bearer token
+            - Expired token
+            - TokenReview API rejection
+            
+            **Resolution**: Provide valid Kubernetes ServiceAccount token via `Authorization: Bearer <token>` header.
+            
+            **Authority**: DD-AUTH-014 (Middleware-based authentication)
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RFC7807Problem'
+        '403':
+          description: |
+            Authorization failed - Kubernetes SubjectAccessReview (SAR) denied access.
+            
+            **Source**: DataStorage auth middleware (DD-AUTH-014)
+            
+            **Cause**: ServiceAccount lacks required RBAC permission on data-storage-service resource.
+            
+            **Resolution**: Grant ServiceAccount the `data-storage-client` ClusterRole via RoleBinding.
+            
+            **Authority**: DD-AUTH-014 (Middleware-based authorization)
           content:
             application/problem+json:
               schema:
