--- a/deploy/data-storage/configmap.yaml
+++ b/deploy/data-storage/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config.yaml: |
     server:
-      port: 8080
+      port: 8081  # DD-AUTH-004: Internal port (oauth-proxy listens on 8080, proxies to 8081)
       host: "0.0.0.0"
       read_timeout: "30s"
       write_timeout: "30s"
