--- a/deploy/data-storage/deployment.yaml
+++ b/deploy/data-storage/deployment.yaml
@@ -30,60 +30,19 @@ spec:
           type: RuntimeDefault
       containers:
         # ========================================
-        # DD-AUTH-004: OAuth-Proxy Sidecar for Authentication/Authorization
-        # DD-AUTH-005: All 8 services authenticate via this proxy
+        # DD-AUTH-014: Middleware-Based Authentication/Authorization
+        # No oauth-proxy sidecar - auth handled in DataStorage middleware
         #
-        # Flow: Client → oauth-proxy:8080 → DataStorage:8081
-        # - oauth-proxy validates JWT tokens
-        # - oauth-proxy performs Subject Access Review (SAR) - Tiered approach
-        # - oauth-proxy injects X-Auth-Request-User header
-        # - DataStorage receives authenticated requests
+        # Flow: Client → DataStorage:8081 (direct)
+        # - DataStorage middleware validates tokens (TokenReview API)
+        # - DataStorage middleware checks permissions (SubjectAccessReview API)
+        # - User identity injected into context for audit logging
         # ========================================
-        - name: oauth-proxy
-          image: quay.io/openshift/oauth-proxy:latest
-          imagePullPolicy: IfNotPresent
-          ports:
-            - name: proxy
-              containerPort: 8080
-              protocol: TCP
-          args:
-            - --https-address=
-            - --http-address=0.0.0.0:8080
-            - --upstream=http://localhost:8081
-            - --provider=openshift
-            - --openshift-service-account=data-storage-sa
-            - --cookie-secret-file=/etc/oauth-proxy/cookie-secret
-            - --cookie-name=_oauth_proxy
-            - --cookie-expire=24h0m0s
-            - --email-domain=*
-            - --skip-provider-button=true
-            # DD-AUTH-004: Tiered SAR - All REST APIs require authorization
-            - --openshift-sar={"namespace":"kubernaut-system","resource":"services","resourceName":"data-storage-service","verb":"get"}
-            # Pass user identity to DataStorage (SOC2 compliance)
-            - --set-xauthrequest=true
-          volumeMounts:
-            - name: oauth-proxy-cookie-secret
-              mountPath: /etc/oauth-proxy
-              readOnly: true
-          resources:
-            requests:
-              cpu: 10m
-              memory: 20Mi
-            limits:
-              cpu: 100m
-              memory: 100Mi
-          securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
-            capabilities:
-              drop:
-                - ALL
-
         - name: data-storage
           image: quay.io/jordigilh/data-storage:latest
           imagePullPolicy: Always
           ports:
-            # DD-AUTH-004: Changed from 8080 to 8081 (internal port, behind oauth-proxy)
+            # DD-AUTH-014: Direct access (no proxy)
             - name: http
               containerPort: 8081
               protocol: TCP
@@ -91,7 +50,7 @@ spec:
               containerPort: 9090
               protocol: TCP
           env:
-            # DD-AUTH-004: DataStorage listens on 8081 (oauth-proxy proxies 8080 → 8081)
+            # DD-AUTH-014: DataStorage listens on 8081 (direct access)
             - name: SERVER_PORT
               value: "8081"
           envFrom:
@@ -106,17 +65,25 @@ spec:
             limits:
               cpu: 500m
               memory: 512Mi
-          # TODO: Add health/readiness probes when HTTP server is implemented
-          # livenessProbe:
-          #   httpGet:
-          #     path: /health
-          #     port: 8080
-          #     scheme: HTTP
-          # readinessProbe:
-          #   httpGet:
-          #     path: /ready
-          #     port: 8080
-          #     scheme: HTTP
+          # DD-AUTH-014: Health probes check DataStorage directly (no proxy)
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8081  # Direct to DataStorage
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8081  # DD-AUTH-014: Direct to DataStorage
+              scheme: HTTP
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
@@ -133,13 +100,7 @@ spec:
       volumes:
         - name: tmp
           emptyDir: {}
-        # DD-AUTH-004: OAuth-proxy cookie secret for session management
-        - name: oauth-proxy-cookie-secret
-          secret:
-            secretName: data-storage-oauth-proxy-secret
-            items:
-              - key: cookie-secret
-                path: cookie-secret
+        # DD-AUTH-014: No oauth-proxy volumes needed (middleware-based auth)
         # SOC2 Day 9.1: Signing certificate (managed by cert-manager)
         # Certificate: deploy/data-storage/certificate.yaml
         # Format: tls.crt, tls.key (cert-manager compatible)
